--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                                                     <ul>
                                                         <li><a class="scrolltop">Home</a></li>
                                                         <li><a href="#technologies">Technologies</a> </li>
-                                                        <li><a href="features">Features</a>
+                                                        <li><a href="features.html">Features</a>
                                                                 <li><a href="#integrations">Integrations</a>
                                                         <li><a href="#usecases">Usecases</a> </li>
-                                                            <li><a href="whoweare">Who We Are</a></li>
+                                                            <li><a href="whoweare.html">Who We Are</a></li>
                                                         <li class="showmodal"><a  data-toggle="modal" data-target="#myModal">Contact</a>
                                                         </li>
                                                         <li class="d-sm-block d-md-none"><a class="originaltext" href="requestdemo">Request Demo</a></li>
@@ -573,7 +573,7 @@
                               <h4>Platform</h4>
                               <ul>
                                         <li><a class="transistion" href="#technologies">Technologies</a> </li>
-                                        <li><a class="transistion" href="features">Features</a>
+                                        <li><a class="transistion" href="features.html">Features</a>
                                                 <li><a class="transistion" href="#integrations">Integrations</a> </li>
                                         <li><a class="transistion" href="#usecases">Usecases</a> </li>
 
@@ -629,7 +629,7 @@
                         <div class="container-fluid">
                             <div class="row">
                                     <div class="col-xs-12 col-md-6 col-xl-6">
-                                            <p>© Copyright 2018 <a class="transistion" href="https://botjet.ai/whoweare"> Tresm Labs</a>. <span class="sp">All Rights Reserved.</span></p>
+                                            <p>© Copyright 2018 <a class="transistion" href="https://botjet.ai/whoweare.html"> Tresm Labs</a>. <span class="sp">All Rights Reserved.</span></p>
                                     </div>
                                     <div class="col-xs-12 col-md-6 col-xl-6 rtsec">
                                             <ul class="social-links">
