--- a/whoweare.html
+++ b/whoweare.html
@@ -56,14 +56,14 @@
                                 <nav class="dropnav">
                                                 <a href="javascript:void(0)" class="closebtn visible-xs"></a>
                                     <ul>
-                                        <li><a href="https://botjet.ai/">Home</a></li>
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="/#technologies">Technologies</a> </li>
-                                        <li><a href="features">Features</a>
+                                        <li><a href="features.html">Features</a>
                                         </li>
                                         <li><a href="/#integrations">Integrations</a></li>
                                         <li><a  href="/#usecases">Usecases</a> </li>
                               
-                                            <li><a  class="active"  href="whoweare">Who We Are</a></li>
+                                            <li><a  class="active"  href="whoweare.html">Who We Are</a></li>
                                         <li class="showmodal"><a  data-toggle="modal" data-target="#myModal">Contact</a>
                                         </li>
                                         <li class="d-sm-block d-md-none"><a class="originaltext" href="requestdemo">Request Demo</a></li>
@@ -361,9 +361,9 @@
                             <div class="f-sec r1">
                                 <h4>Company</h4>
                                 <ul>
-                                            <li><a class="transistion" href="https://botjet.ai/">Home</a></li>
-                                            <li><a class="transistion" href="whoweare">Who We Are</a></li>
-                                            <li><a class="transistion" href="resources">Resources</a></li>
+                                            <li><a class="transistion" href="index.html">Home</a></li>
+                                            <li><a class="transistion" href="whoweare.html">Who We Are</a></li>
+                                            <li><a class="transistion" href="resources.html">Resources</a></li>
                                             <li><a class="transistion"  data-toggle="modal" data-target="#myModal">Contact</a>
                                             </li>
                                             <li><a class="transistion" href="sitemap">Sitemap</a></li>
@@ -376,7 +376,7 @@
                           <h4>Platform</h4>
                           <ul>
                                     <li><a class="transistion" href="/#technologies">Technologies</a> </li>
-                                    <li><a class="transistion" href="features">Features</a>
+                                    <li><a class="transistion" href="features.html">Features</a>
                                         <li><a class="transistion" href="/#integrations">Integrations</a> </li>
                                     <li><a class="transistion" href="/#usecases">Usecases</a> </li>
 
