--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
            
 
                             <ul>
-                                    <li><a class="originaltext" href="requestdemo">Request Demo</a></li>
+                                    <li><a class="originaltext" href="requestdemo.html">Request Demo</a></li>
                                     <li class="whitebr"><a href="http://platform.botjet.ai/" target="_blank">Login</a></li>
                             </ul>
                     </div>
@@ -560,10 +560,10 @@
                                     <h4>Company</h4>
                                     <ul>
                                                 <li><a class="transistion scrolltop">Home</a></li>
-                                                <li><a class="transistion" href="whoweare">Who We Are</a></li>
-                                                <li><a class="transistion" href="resources">Resources</a></li>
+                                                <li><a class="transistion" href="whoweare.html">Who We Are</a></li>
+                                                <li><a class="transistion" href="resources.html">Resources</a></li>
                                                 <li><a class="transistion"  data-toggle="modal" data-target="#myModal">Contact</a>
-                                                <li><a class="transistion" href="sitemap">Sitemap</a></li>
+                                                <li><a class="transistion" href="sitemap.html">Sitemap</a></li>
                                                 </li>
                                         </ul>
                                   </div>
