--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                         <div class="container-fluid">
                             <div class="row">
                                     <div class="col-xs-12 col-md-6 col-xl-6">
-                                            <p>© Copyright 2018 <a class="transistion" href="https://botjet.ai/whoweare.html"> Tresm Labs</a>. <span class="sp">All Rights Reserved.</span></p>
+                                            <p>© Copyright 2018 <a class="transistion" href="whoweare.html"> Tresm Labs</a>. <span class="sp">All Rights Reserved.</span></p>
                                     </div>
                                     <div class="col-xs-12 col-md-6 col-xl-6 rtsec">
                                             <ul class="social-links">
