--- a/requestdemo.html
+++ b/requestdemo.html
@@ -54,22 +54,22 @@
                             <nav class="dropnav">
                                         <a href="javascript:void(0)" class="closebtn visible-xs"></a>
                                 <ul>
-                                    <li><a href="https://botjet.ai/">Home</a></li>
-                                    <li><a href="https://botjet.ai/#technologies">Technologies</a> </li>
-                                    <li><a  href="https://botjet.ai/features">Features</a>
-                                        <li><a href="https://botjet.ai/#integrations">Integrations</a></li>
-                                    <li><a  href="https://botjet.ai/#usecases">Usecases</a> </li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="/#technologies">Technologies</a> </li>
+                                    <li><a  href="features.htmltures</a>
+                                        <li><a href="#integrations">Integrations</a></li>
+                                    <li><a  href="#usecases">Usecases</a> </li>
          
-                                        <li><a href="whoweare">Who We Are</a></li>
+                                        <li><a href="whoweare.html We Are</a></li>
                                     <li class="showmodal"><a  data-toggle="modal" data-target="#myModal">Contact</a>
                                     </li>
-                                    <li class="d-sm-block-desc d-md-none"><a class="originaltext"  href="requestdemo">Request Demo</a></li>
+                                    <li class="d-sm-block-desc d-md-none"><a class="originaltext" href="requestdemo.html">Request Demo</a></li>
                                   </ul>
                             </nav>
                     </div>
                     <div class="col-12 col-md-12 col-lg-3 col-xl-3 rt-links text-right">
                             <ul>
-                                    <li><a class="originaltext"  href="requestdemo">Request Demo</a></li>
+                                    <li><a class="originaltext"  href="requestdemo.html">Request Demo</a></li>
                                     <li><a href="http://platform.botjet.ai/" target="_blank">Login</a></li>
                             </ul>
                     </div>
@@ -876,10 +876,10 @@
                                     <ul>
                                        
                                         <li><a class="transistion" href="https://botjet.ai/">Home</a></li>
-                                        <li><a class="transistion" href="whoweare">Who We Are</a></li>
-                                        <li><a class="transistion" href="resources">Resources</a></li>
+                                        <li><a class="transistion" href="whoweare.html">Who We Are</a></li>
+                                        <li><a class="transistion" href="resources.html">Resources<a></li>
                                                 <li><a class="transistion"  data-toggle="modal" data-target="#myModal">Contact</a></li>
-                                                <li><a class="transistion" href="sitemap">Sitemap</a></li>
+                                                <li><a class="transistion" href="sitemap.html">SiteMap<a></li>
                                         </li>
                                         </ul>
                                   </div>
@@ -889,8 +889,8 @@
                               <h4>Platform</h4>
                               <ul>
                                 <li><a class="transistion" href="/#technologies">Technologies</a> </li>
-                                <li><a class="transistion" href="features">Features</a></li>
-                                <li><a class="transistion" href="/#integrations">Integrations</a> </li>
+				      <li><a class="transistion" href="features.html">Feautures<a></li>
+					<li><a class="transistion" href="/#integrations">Integrations</a> </li>
                                 <li><a class="transistion" href="/#usecases">Usecases</a> </li>
                               </ul>
                             </div>
