--- a/whoweare.html
+++ b/whoweare.html
@@ -66,13 +66,13 @@
                                             <li><a  class="active"  href="whoweare.html">Who We Are</a></li>
                                         <li class="showmodal"><a  data-toggle="modal" data-target="#myModal">Contact</a>
                                         </li>
-                                        <li class="d-sm-block d-md-none"><a class="originaltext" href="requestdemo">Request Demo</a></li>
+                                        <li class="d-sm-block d-md-none"><a class="originaltext" href="requestdemo.html">Request Demo</a></li>
                                       </ul>
                                 </nav>
                         </div>
                         <div class="col-12 col-md-12 col-lg-3 col-xl-3 rt-links text-right">
                                 <ul>
-                                        <li><a href="requestdemo"  class="originaltext">Request Demo</a></li>
+                                        <li><a href="requestdemo.html"  class="originaltext">Request Demo</a></li>
                                         <li><a href="http://platform.botjet.ai/" target="_blank">Login</a></li>
                                 </ul>
                         </div>
