--- a/features.html
+++ b/features.html
@@ -54,13 +54,13 @@
                             <nav class="dropnav">
                                         <a href="javascript:void(0)" class="closebtn visible-xs"></a>
                                 <ul>
-                                    <li><a href="https://botjet.ai/">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="/#technologies">Technologies</a> </li>
-                                    <li><a class="active" href="features">Features</a>
+                                    <li><a class="active" href="features.html">Features</a>
                                         <li><a href="/#integrations">Integrations</a></li>
                                     <li><a  href="/#usecases">Usecases</a> </li>
          
-                                        <li><a href="whoweare">Who We Are</a></li>
+                                        <li><a href="whoweare.html">Who We Are</a></li>
                                     <li class="showmodal"><a  data-toggle="modal" data-target="#myModal">Contact</a>
                                     </li>
                                     <li class="d-sm-block d-md-none"><a class="originaltext" href="requestdemo">Request Demo</a></li>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="col-12 col-md-12 col-lg-3 col-xl-3 rt-links text-right">
                             <ul>
-                                <li><a class="originaltext" href="requestdemo">Request Demo</a></li>
+                                <li><a class="originaltext" href="requestdemo.html">Request Demo</a></li>
                                     <li><a href="http://platform.botjet.ai/" target="_blank">Login</a></li>
                             </ul>
                     </div>
@@ -606,10 +606,10 @@
                                     <ul>
                                        
                                         <li><a class="transistion" href="https://botjet.ai/">Home</a></li>
-                                        <li><a class="transistion" href="whoweare">Who We Are</a></li>
-                                        <li><a class="transistion" href="resources">Resources</a></li>
+                                        <li><a class="transistion" href="whoweare.html">Who We Are</a></li>
+                                        <li><a class="transistion" href="resources.html">Resources</a></li>
                                                 <li><a class="transistion"  data-toggle="modal" data-target="#myModal">Contact</a></li>
-                                                <li><a class="transistion" href="sitemap">Sitemap</a></li>
+                                                <li><a class="transistion" href="sitemap.html">Sitemap</a></li>
                                         </li>
                                         </ul>
                                   </div>
@@ -619,7 +619,7 @@
                               <h4>Platform</h4>
                               <ul>
                                 <li><a class="transistion" href="/#technologies">Technologies</a> </li>
-                                <li><a class="transistion" href="features">Features</a></li>
+                                <li><a class="transistion" href="features.html">Features</a></li>
                                 <li><a class="transistion" href="/#integrations">Integrations</a> </li>
                                 <li><a class="transistion" href="/#usecases">Usecases</a> </li>
                               </ul>
